--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
-    "electron": "^13.2.1"
+    "electron": "^13.2.1",
+    "electron-builder": "^22.11.7",
+    "electron-is-dev": "^2.0.0"
   }
 }
